force-app/main/default/objects/vlocity_cmt__OrderPayment__c/fields/vlocity_cmt__OrderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OrderId__c</fullName>
    <description>The Order of the customer who made the payment</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>OrderPayments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>