force-app/main/default/objects/vlocity_cmt__OrderPayment__c/fields/vlocity_cmt__PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentAmount__c</fullName>
    <description>The amount received.</description>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>