force-app/main/default/objects/vlocity_cmt__OrderPayment__c/fields/vlocity_cmt__PaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentMethodId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Method used in the Payment event</description>
    <label>Payment Method</label>
    <referenceTo>vlocity_cmt__PaymentMethod__c</referenceTo>
    <relationshipName>OrderPayments</relationshipName>
    <type>Lookup</type>
</CustomField>